[package]
name = "owner"
version = "0.1.0"
authors = ["schacker <1039407128@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.5"
itertools = "0.10.0"
log4rs = "1.0.0"
log = "0.4"

[profile.release]
panic='abort'
opt-level = 3

[profile.dev]
opt-level = 0