[package]
name = "wasm-utils"
version = "0.1.2"
authors = ["huangwei <huangwei@ke.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.50"
wasm-bindgen-test="0.2"
regex = "1.4.5"
itertools = "0.10.0"
console_error_panic_hook = "0.1.6"
