[package]
name = "basics"
version = "2.0.0"
authors = ["1039407128lgx@gmail.com"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-session = "0.4.1"
actix-utils = "1.0.3"

futures = "0.3.1"
env_logger = "0.7"
bytes = "0.5"
# 处理日期和时间列
mysql = '*'
chrono = '0.4'
